<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/jeu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JeuActivity">

        <Button
            android:id="@+id/buttonVraiPlayer1"
            style="@style/True.SpeedQuiz.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/bt_game_true"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/question"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            app:layout_constraintLeft_toRightOf="@id/buttonVraiPlayer1"
            app:layout_constraintTop_toBottomOf="@id/buttonVraiPlayer1" />

        <TextView
            android:id="@+id/nom_joueur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_margin_right"
            android:rotation="180"
            android:text="@string/name_player"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question1" />

        <TextView
            android:id="@+id/point_joueur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/point_player"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            app:layout_constraintRight_toLeftOf="@+id/nom_joueur1"
            app:layout_constraintTop_toBottomOf="@id/question1" />

        <TextView
            android:id="@+id/nom_joueur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_margin_right"
            android:text="@string/name_player"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/question2"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/point_joueur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_player"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            app:layout_constraintBottom_toTopOf="@id/question2"
            app:layout_constraintLeft_toRightOf="@id/nom_joueur2" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            app:layout_constraintBottom_toTopOf="@id/buttonVraiPlayer2"
            app:layout_constraintLeft_toRightOf="@id/buttonVraiPlayer2" />

        <Button
            android:id="@+id/buttonVraiPlayer2"
            style="@style/True.SpeedQuiz.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_game_true"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/param_finjeu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/buttonMenu"
            style="@style/True.SpeedQuiz.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_right"
            android:text="@string/Menu"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonRestart"
            style="@style/True.SpeedQuiz.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_right"
            android:text="@string/Restart"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gagnant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gagnant"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/joueurGagnant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_players"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_True"
            app:layout_constraintLeft_toRightOf="@id/gagnant"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="158dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>